# aim

./: .gitignore  Makefile.am  README  configure.ac
agents/: Makefile.am
agents/app-indicator/: Makefile.am  aim-indicator.c
agents/gnome-shell-extension/: Makefile.am  extension.js  metadata.json.in
daemon/: Makefile.am  aim-daemon.c
data/icons/: Makefile.am
data/im-config/: 70_aim.conf  70_aim.rc  Makefile.am
debian/: control  copyright
libaim/: Makefile.am  aim-agent.c  aim-agent.h  aim-candidate.c  aim-candidate.h  aim-connection.c  aim-connection.h  aim-engine.c  aim-engine.h  aim-english.c  aim-english.h  aim-enum-types.c.template  aim-enum-types.h.template  aim-events.c  aim-events.h  aim-im.c  aim-im.h  aim-key-syms.h  aim-message.c  aim-message.h  aim-module-manager.c  aim-module-manager.h  aim-module.c  aim-module.h  aim-private.c  aim-private.h  aim-server.c  aim-server.h  aim-types.c  aim-types.h  aim.h  aim.pc.in  org.aim.gschema.xml
modules/clients/gtk/: Makefile.am  im-aim.c  org.aim.clients.gtk.gschema.xml
modules/clients/qt4/: Makefile.am  im-aim-qt4.cpp
modules/clients/qt5/: Makefile.am  aim.json  im-aim-qt5.cpp
modules/engines/: Makefile.am
modules/engines/aim-jeongeum/: Makefile.am  aim-jeongeum.c  org.aim.engines.jeongeum.gschema.xml
modules/engines/aim-libhangul/: Makefile.am  aim-libhangul.c  org.aim.engines.libhangul.gschema.xml
modules/engines/aim-sunpinyin/: Makefile.am  aim-sunpinyin.cpp  org.aim.engines.sunpinyin.gschema.xml
po/: POTFILES.in  ko.po
